# Smarts

./: .gitignore  AGENTS.md  CLAUDE.md  Default.sublime-commands  Example.sublime-keymap  LanguageServerClient.sublime-settings  README.md  RESILIENCE_IMPROVEMENTS.md  Smarts.sublime-project  Smarts.sublime-settings  THREAD_SAFETY_RECOMMENDATIONS.md  language_server_client.py  pyproject.toml  pyrightconfig.json  smarts.py  smarts_client.py  smarts_model.py  smarts_typing.py
companion/: Package.swift  README.md
companion/Sources/companion/: Companion.swift  main.swift
companion/assets/: companion.icns
companion/scripts/: update_icon.sh
lib/: smarts_client.py  smarts_markdown.py
tests/: test_smarts_markdown.py
typings/: sublime.pyi  sublime_plugin.pyi
