[project]
name = "Smarts"
version = "0.1.0"
description = "Language Server Client for Sublime Text"
readme = "README.md"
requires-python = "~=3.8"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ty>=0.0.1a34",
]

[tool.ty.environment]
extra-paths = ["./typings"]
python-version = "3.8"
root = [".."]
